--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/*Reset default styles*/
 *{
     font-family: Arial, sans-serif;
     max-width: 800px;
@@ -16,7 +15,7 @@
 
 #vis svg {
     margin: 2rem 0;
-    border: 1px solid #ccc; /*otherwise you can't see this part*/
+    border: 1px solid #ccc;
 }
 
 button {
@@ -25,11 +24,11 @@ button {
 }
 
 #tooltip {
-    position: absolute; /* So we can move it with the cursor */
+    position: absolute;
     padding: 10px;
     background: white;
     border: 1px solid #ddd;
     border-radius: 4px;
-    pointer-events: none; /* Prevent tooltip from interfering with mouse events */
+    pointer-events: none;
     font-size: 12px;
 }
